add pagitation and filters on all pages